<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InClass1</string>
    <string name="action_settings">Settings</string>
    <string name="TextMsg">No. of Button Clicks</string>
    
    <string name="btn1txt">Black</string>
    <string name="btn2txt">White</string>
    <string name="btn3txt">Red</string>
    <string name="btn4txt">Green</string>
    <string name="btn5txt">Blue</string>

</resources>
